Added characterizing unit test for AddressHelper.convertToAddress before simplifying logic. Also fixed a couple of checkstyle warnings. /Joakim